# cpp_memes

./: .gitignore  CMakeLists.txt
include/: main.hpp  problems.hpp  status.hpp
include/etl/: data_pipeline.hpp
include/utils/: file_operations.hpp
src/: main.cpp  problems.cpp
src/etl/: data_pipeline.cpp
src/utils/: file_operations.cpp
